--- a/Dotnet core console app/AwsIOTMqttOverWebsockets/AwsIOTMqttOverWebsockets/AwsIOTMqttOverWebsockets.csproj
+++ b/Dotnet core console app/AwsIOTMqttOverWebsockets/AwsIOTMqttOverWebsockets/AwsIOTMqttOverWebsockets.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,8 +28,5 @@
     <None Update="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Remove="Model\ICloudConnectorConfig.cs" />
   </ItemGroup>
 </Project>
