--- a/Dotnet core console app/AwsIOTMqttOverWebsockets/AwsIOTMqttOverWebsockets/appsettings.json
+++ b/Dotnet core console app/AwsIOTMqttOverWebsockets/AwsIOTMqttOverWebsockets/appsettings.json
@@ -1,14 +1,6 @@
 ﻿{
-  "method": "GET",
-  "protocol": "wss",
-  "uri": "/mqtt",
-  "service": "iotdevicegateway",
-  "algorithm": "AWS4-HMAC-SHA256",
-  "host": "youtiotendpoint.iot.us-east-1.amazonaws.com",
+  "host": "yourendpoint.iot.us-east-1.amazonaws.com",
   "region": "us-east-1",
   "accesskey": "youraccesskey",
-  "secretkey": "yoursecretkey",
-  "topictopublish": "sundar/topic",
-  "topictosubscribe": "sundar/topic2"
-
+  "secretkey": "yoursecretkey"
 }
