--- a/Dotnet win app/awsiotmqttoverwebsocketswinapp/awsiotmqttoverwebsocketswinapp/awsiotmqttoverwebsocketswinapp.csproj
+++ b/Dotnet win app/awsiotmqttoverwebsocketswinapp/awsiotmqttoverwebsocketswinapp/awsiotmqttoverwebsocketswinapp.csproj
@@ -69,23 +69,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form2.cs">
+    <Compile Include="Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="Form.Designer.cs">
+      <DependentUpon>Form.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\AwsMqttConnection.cs" />
     <Compile Include="Presenter\AwsIotPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Signers\AWS4SignerBase.cs" />
+    <Compile Include="Signers\AWS4SignerForAuthorizationHeader.cs" />
+    <Compile Include="Signers\AWS4SignerForChunkedUpload.cs" />
+    <Compile Include="Signers\AWS4SignerForPOST.cs" />
+    <Compile Include="Signers\AWS4SignerForQueryParameterAuth.cs" />
     <Compile Include="Utils\ConfigHelper.cs" />
-    <Compile Include="Utils\HttpHelper.cs" />
+    <Compile Include="Utils\HttpHelpers.cs" />
     <Compile Include="Utils\Logger.cs" />
-    <Compile Include="Utils\Sigv4util.cs" />
     <Compile Include="View\IAwsIotView.cs" />
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="Form.resx">
+      <DependentUpon>Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -122,5 +126,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
