Minor code cleanup

--- a/Dotnet core console app/AwsIOTMqttOverWebsockets/.vscode/tasks.json
+++ b/Dotnet core console app/AwsIOTMqttOverWebsockets/.vscode/tasks.json
@@ -7,9 +7,8 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/AwsIOTMqttOverWebsockets/AwsIOTMqttOverWebsockets.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "${workspaceFolder}/AwsIOTMqttOverWebsockets.sln",
+                "/property:GenerateFullPaths=true"
             ],
             "problemMatcher": "$msCompile"
         },
