Cleaning up README to match new solution.

--- a/Dotnet core console app/AwsIOTMqttOverWebsockets/AwsIOTMqttOverWebsockets/log4net.config
+++ b/Dotnet core console app/AwsIOTMqttOverWebsockets/AwsIOTMqttOverWebsockets/log4net.config
@@ -5,7 +5,7 @@
   </configSections>  
   <log4net>
     <root>
-      <level value="ALL" />
+      <level value="INFO" />
       <appender-ref ref="MyAppender" />
       <appender-ref ref="RollingFileAppender" />
     </root>
