Added support for AWS STS keys. Session key obtained from STS service can be set in appsettings.json

--- a/Dotnet core console app/AwsIOTMqttOverWebsockets/AwsIOTMqttOverWebsockets/appsettings.json
+++ b/Dotnet core console app/AwsIOTMqttOverWebsockets/AwsIOTMqttOverWebsockets/appsettings.json
@@ -2,5 +2,6 @@
   "host": "yourendpoint.iot.us-east-1.amazonaws.com",
   "region": "us-east-1",
   "accesskey": "youraccesskey",
-  "secretkey": "yoursecretkey"
+  "secretkey": "yoursecretkey",
+  "sessiontoken": "yoursessiontoken"
 }
