Add MQTTnet ManagedClient extension

--- a/Dotnet win app/awsiotmqttoverwebsocketswinapp/awsiotmqttoverwebsocketswinapp/awsiotmqttoverwebsocketswinapp.csproj
+++ b/Dotnet win app/awsiotmqttoverwebsocketswinapp/awsiotmqttoverwebsocketswinapp/awsiotmqttoverwebsocketswinapp.csproj
@@ -54,6 +54,9 @@
     <Reference Include="MQTTnet, Version=3.0.15.0, Culture=neutral, PublicKeyToken=b69712f52770c0a7, processorArchitecture=MSIL">
       <HintPath>..\packages\MQTTnet.3.0.15\lib\net461\MQTTnet.dll</HintPath>
     </Reference>
+    <Reference Include="MQTTnet.Extensions.ManagedClient, Version=3.0.15.0, Culture=neutral, PublicKeyToken=b69712f52770c0a7, processorArchitecture=MSIL">
+      <HintPath>..\packages\MQTTnet.Extensions.ManagedClient.3.0.15\lib\net461\MQTTnet.Extensions.ManagedClient.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
