--- a/Dotnet win app/awsiotmqttoverwebsocketswinapp/awsiotmqttoverwebsocketswinapp/packages.config
+++ b/Dotnet win app/awsiotmqttoverwebsocketswinapp/awsiotmqttoverwebsocketswinapp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="log4net" version="2.0.12" targetFramework="net461" />
   <package id="MQTTnet" version="3.0.15" targetFramework="net461" />
+  <package id="MQTTnet.Extensions.ManagedClient" version="3.0.15" targetFramework="net461" />
 </packages>
